--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,12 @@
             <div class="controls">
                 <div class="popup-fail">
                     <video class="video-fail" preload="auto">
-                        <source src="fail.mp4">
+                        <source src="video/fail.mp4">
                     </video>
                 </div>
                 <div class="popup-win">
                     <video class="video-win" preload="auto">
-                        <source src="win.mp4">
+                        <source src="video/win.mp4">
                     </video>
                 </div>
             </div>
