--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,8 @@
                         <button id="new-game">
                             Новая игра
                         </button>
-                        <p>
-                            Вы не помогли Арнольду :(
+                        <p id="game-result">
+                            
                         </p>
                     </div>
                 </div>
