--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap&subset=cyrillic-ext" rel="stylesheet">
-        <title>Тест</title>
+        <title>Помоги Арнольду</title>
     </head>
     <body>
         <div class="container">
